Собрал скелет страницы объявления "просто Продажа"

--- a/pages/ad.html
+++ b/pages/ad.html
@@ -249,6 +249,7 @@
                                  <h6>г. Самара, ул. Красногвардейская дом 20</h6>
                              </div>
                          </div>
+                         <a href="#" class="btn btn-success">Все объявления продавца</a>
                      </div>
                  </div>
                  <!-- Блок подробно о товаре -->
@@ -297,8 +298,17 @@
                      </div>
                  </div>
                  <!-- Кнопка пожаловаться -->
+                 <div class="col-12 text-right">
+                     <a href="#" class="btn btn-danger">
+                         Пожаловаться
+                     </a>
+                     <hr>
+                 </div>
+                 <!-- Место под модули (объявления, баннеры и т.п.) -->
                  <div class="col-12">
-
+                     <p>
+                         Место под модули, VIP объявления, похожие объявления, баннеры и т.п.
+                     </p>
                  </div>
              </div>
 
@@ -309,9 +319,11 @@
                  <a href="#">Добавить в избранное</a>
                  <br>
                  <a href="#">Добавить заметку</a>
+                 <hr>
              </div>
              <div>
                  Блок под рекламный баннер
+                 <hr>
              </div>
              <div>
                  Блок рейтинга с отзывами на Модель принтера
