Добавил данные в характеристики скелета страницы объявления "просто Продажа"

--- a/pages/ad.html
+++ b/pages/ad.html
@@ -217,10 +217,12 @@
                          <div class="specific-value">Черно-белый</div>
                          <div class="specific-title">Тип устройства:</div>
                          <div class="specific-value">Принтер</div>
-                         <div class="specific-title">Пробег:</div>
-                         <div class="specific-value">Н/У</div>
                          <div class="specific-title">Макс. формат:</div>
                          <div class="specific-value">A4</div>
+                         <div class="specific-title">Пробег:</div>
+                         <div class="specific-value">Н/У</div>
+                         <div class="specific-title">Внешний вид:</div>
+                         <div class="specific-value">Как новый</div>
                          <div class="specific-title">Комплектация:</div>
                          <div class="specific-value">USB кабель, кабель питания, драйверы</div>
                          <a href="#ad-specific" data-toggle="tab">Все характеристики</a>
@@ -315,16 +317,19 @@
          </div>
          <!-- Правая колонка -->
          <div class="col-sm-3 col-md-3 col-lg-3">
+             <!-- Кнопки добавить избранное и заметку -->
              <div>
                  <a href="#">Добавить в избранное</a>
                  <br>
                  <a href="#">Добавить заметку</a>
                  <hr>
              </div>
+             <!-- Блок под рекламный баннер -->
              <div>
                  Блок под рекламный баннер
                  <hr>
              </div>
+             <!-- Блок рейтинга с отзывами на модель товара -->
              <div>
                  Блок рейтинга с отзывами на Модель принтера
              </div>
