Добавил скелеты страниц объявления "Продажа запчастей" и "Продажа  на запчасти"

--- a/pages/ad_component.html
+++ b/pages/ad_component.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/ads_views.css">
 
-    <title>Продам принтер HP 1010 как новый!</title>
+    <title>Продам принтер HP 1010 на запчасти</title>
 </head>
 <body>
 <header>
@@ -174,8 +174,8 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Главная</a></li>
                     <li class="breadcrumb-item"><a href="#">Принтеры / копиры</a></li>
-                    <li class="breadcrumb-item"><a href="#">Продажа принтеров</a></li>
-                    <li class="breadcrumb-item active">Продам принтер HP 1010 как новый!</li>
+                    <li class="breadcrumb-item"><a href="#">Принтеры на запчасти</a></li>
+                    <li class="breadcrumb-item active">Продам принтер HP 1010 на запчасти</li>
                 </ol>
             </nav>
         </div>
@@ -183,19 +183,19 @@
      <div class="row">
          <!-- Заголовок раздела -->
          <h1>
-             Продам принтер HP 1010 как новый!
+             Продам принтер HP 1010 на запчасти
          </h1>
          <!-- Колонка объявления -->
          <div class="col-sm-9 col-md-9 col-lg-9">
              <div class="row">
                  <!-- Блок фото -->
                  <div class="col-8">
-                     <img src="../img/printer_2.jpg" class="img-fluid" alt="">
+                     <img src="../img/print_hp_1010.jpg" class="img-fluid" alt="">
                  </div>
                  <!-- Блок информации о товаре и продавце -->
                  <div class="col-4">
                      <h2>3230 ₽</h2>
-                     <p>Дата: Сегодня 11:34<br>г. Самара</p>
+                     <p>Дата: Сегодня 11:34<br>г. Владивосток</p>
                      <button type="button" class="btn btn-info">
                          Безопасная покупка
                      </button>
@@ -205,26 +205,19 @@
                      <button type="button" class="btn btn-warning">
                          Написать продавцу
                      </button>
+                     <button type="button" class="btn btn-success">
+                         Запросить запчасть
+                     </button>
                      <!-- Характеристики товара -->
                      <div>
                          <div class="specific-title">Бренд:</div>
                          <div class="specific-value">HP</div>
                          <div class="specific-title">Модель:</div>
                          <div class="specific-value">LJ 1010</div>
-                         <div class="specific-title">Технология печати:</div>
-                         <div class="specific-value">Лазерный</div>
-                         <div class="specific-title">Цветность:</div>
-                         <div class="specific-value">Черно-белый</div>
-                         <div class="specific-title">Тип устройства:</div>
-                         <div class="specific-value">Принтер</div>
-                         <div class="specific-title">Макс. формат:</div>
-                         <div class="specific-value">A4</div>
-                         <div class="specific-title">Пробег:</div>
-                         <div class="specific-value">Н/У</div>
-                         <div class="specific-title">Внешний вид:</div>
-                         <div class="specific-value">Как новый</div>
-                         <div class="specific-title">Комплектация:</div>
-                         <div class="specific-value">USB кабель, кабель питания, драйверы</div>
+                         <div class="specific-title">Состояние:</div>
+                         <div class="specific-value">Б/У</div>
+                         <div class="specific-title">Работает:</div>
+                         <div class="specific-value">Нет</div>
                          <a href="#ad-specific" data-toggle="tab">Все характеристики</a>
                      </div>
                      <hr>
@@ -256,6 +249,7 @@
                  </div>
                  <!-- Блок подробно о товаре -->
                  <div class="col-12">
+                     <!-- Наименование вкладок -->
                      <ul class="nav nav-pills">
                          <li class="nav-item">
                              <a href="#ad-description" class="nav-link active" data-toggle="tab">
@@ -263,12 +257,12 @@
                              </a>
                          </li>
                          <li class="nav-item">
-                             <a href="#ad-specific" class="nav-link" data-toggle="tab">
-                                 Характеристики
+                             <a href="#ad-missing" class="nav-link" data-toggle="tab">
+                                 Продано / отсутствует / неисправно
                              </a>
                          </li>
                      </ul>
-                     <!-- Вкладки -->
+                     <!-- Содержимое вкладок -->
                      <div class="tab-content">
                          <!-- Вкладка описание -->
                          <div class="tab-pane fade show active" id="ad-description">
@@ -276,25 +270,10 @@
                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci, aspernatur atque consequatur cupiditate dignissimos excepturi in ipsam labore nemo omnis perspiciatis praesentium ratione saepe sapiente sequi sit sunt unde veniam voluptatibus! Asperiores libero obcaecati quis voluptate voluptatibus. Accusantium animi beatae dolore est in repellat, soluta voluptas voluptatibus! Autem commodi, debitis distinctio dolorem illo ipsam magnam mollitia repellat?
                              </div>
                          </div>
-                         <!-- Вкладка характеристики -->
-                         <div class="tab-pane fade" id="ad-specific">
-                             <div class="ad-description">
-                                 <div class="specific-title">Бренд:</div>
-                                 <div class="specific-value">HP</div>
-                                 <div class="specific-title">Модель:</div>
-                                 <div class="specific-value">LJ 1010</div>
-                                 <div class="specific-title">Технология печати:</div>
-                                 <div class="specific-value">Лазерный</div>
-                                 <div class="specific-title">Цветность:</div>
-                                 <div class="specific-value">Черно-белый</div>
-                                 <div class="specific-title">Тип устройства:</div>
-                                 <div class="specific-value">Принтер</div>
-                                 <div class="specific-title">Пробег:</div>
-                                 <div class="specific-value">Н/У</div>
-                                 <div class="specific-title">Макс. формат:</div>
-                                 <div class="specific-value">A4</div>
-                                 <div class="specific-title">Комплектация:</div>
-                                 <div class="specific-value">USB кабель, кабель питания, драйверы</div>
+                         <!-- Вкладка отсутствующих/неисправных запчастей -->
+                         <div class="tab-pane fade" id="ad-missing">
+                             <div class="ad-missing">
+                                 Таблица отсутствующих или неисправных или проданных запчастей
                              </div>
                          </div>
                      </div>
