--- a/pages/ad_part.html
+++ b/pages/ad_part.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/ads_views.css">
 
-    <title>Продам принтер HP 1010 как новый!</title>
+    <title>Продам термоузел для принтер HP 1010</title>
 </head>
 <body>
 <header>
@@ -174,8 +174,9 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="#">Главная</a></li>
                     <li class="breadcrumb-item"><a href="#">Принтеры / копиры</a></li>
-                    <li class="breadcrumb-item"><a href="#">Продажа принтеров</a></li>
-                    <li class="breadcrumb-item active">Продам принтер HP 1010 как новый!</li>
+                    <li class="breadcrumb-item"><a href="#">Запчасти для принтеров</a></li>
+                    <li class="breadcrumb-item"><a href="#">Узлы закрепления / печи / термоузлы</a></li>
+                    <li class="breadcrumb-item active">Продам термоузел для принтер HP 1010</li>
                 </ol>
             </nav>
         </div>
@@ -183,19 +184,19 @@
      <div class="row">
          <!-- Заголовок раздела -->
          <h1>
-             Продам принтер HP 1010 как новый!
+             Продам термоузел для принтер HP 1010
          </h1>
          <!-- Колонка объявления -->
          <div class="col-sm-9 col-md-9 col-lg-9">
              <div class="row">
                  <!-- Блок фото -->
                  <div class="col-8">
-                     <img src="../img/printer_2.jpg" class="img-fluid" alt="">
+                     <img src="../img/termousel_hp_1010_800x800.jpg" class="img-fluid" alt="">
                  </div>
                  <!-- Блок информации о товаре и продавце -->
                  <div class="col-4">
                      <h2>3230 ₽</h2>
-                     <p>Дата: Сегодня 11:34<br>г. Самара</p>
+                     <p>Дата: Сегодня 11:34<br>г. Владивосток</p>
                      <button type="button" class="btn btn-info">
                          Безопасная покупка
                      </button>
@@ -207,24 +208,18 @@
                      </button>
                      <!-- Характеристики товара -->
                      <div>
-                         <div class="specific-title">Бренд:</div>
+                         <div class="specific-title">Производитель:</div>
                          <div class="specific-value">HP</div>
-                         <div class="specific-title">Модель:</div>
-                         <div class="specific-value">LJ 1010</div>
-                         <div class="specific-title">Технология печати:</div>
-                         <div class="specific-value">Лазерный</div>
-                         <div class="specific-title">Цветность:</div>
-                         <div class="specific-value">Черно-белый</div>
-                         <div class="specific-title">Тип устройства:</div>
-                         <div class="specific-value">Принтер</div>
-                         <div class="specific-title">Макс. формат:</div>
-                         <div class="specific-value">A4</div>
-                         <div class="specific-title">Пробег:</div>
-                         <div class="specific-value">Н/У</div>
-                         <div class="specific-title">Внешний вид:</div>
-                         <div class="specific-value">Как новый</div>
-                         <div class="specific-title">Комплектация:</div>
-                         <div class="specific-value">USB кабель, кабель питания, драйверы</div>
+                         <div class="specific-title">Тип:</div>
+                         <div class="specific-value">Оригинал</div>
+                         <div class="specific-title">Парт-номер:</div>
+                         <div class="specific-value">RМ1-0655/0661</div>
+                         <div class="specific-title">Состояние:</div>
+                         <div class="specific-value">Б/У</div>
+                         <div class="specific-title">Работает:</div>
+                         <div class="specific-value">Да</div>
+                         <div class="specific-title">Совместимость:</div>
+                         <div class="specific-value">HP LJ 1010 / HP LJ 1018 / HP LJ 1020</div>
                          <a href="#ad-specific" data-toggle="tab">Все характеристики</a>
                      </div>
                      <hr>
@@ -256,6 +251,7 @@
                  </div>
                  <!-- Блок подробно о товаре -->
                  <div class="col-12">
+                     <!-- Наименование вкладок -->
                      <ul class="nav nav-pills">
                          <li class="nav-item">
                              <a href="#ad-description" class="nav-link active" data-toggle="tab">
@@ -267,8 +263,13 @@
                                  Характеристики
                              </a>
                          </li>
+                         <li class="nav-item">
+                             <a href="#ad-compatible" class="nav-link" data-toggle="tab">
+                                 Таблица совместимости
+                             </a>
+                         </li>
                      </ul>
-                     <!-- Вкладки -->
+                     <!-- Содержимое вкладок -->
                      <div class="tab-content">
                          <!-- Вкладка описание -->
                          <div class="tab-pane fade show active" id="ad-description">
@@ -278,23 +279,25 @@
                          </div>
                          <!-- Вкладка характеристики -->
                          <div class="tab-pane fade" id="ad-specific">
-                             <div class="ad-description">
-                                 <div class="specific-title">Бренд:</div>
+                             <div class="ad-specific">
+                                 <div class="specific-title">Производитель:</div>
                                  <div class="specific-value">HP</div>
-                                 <div class="specific-title">Модель:</div>
-                                 <div class="specific-value">LJ 1010</div>
-                                 <div class="specific-title">Технология печати:</div>
-                                 <div class="specific-value">Лазерный</div>
-                                 <div class="specific-title">Цветность:</div>
-                                 <div class="specific-value">Черно-белый</div>
-                                 <div class="specific-title">Тип устройства:</div>
-                                 <div class="specific-value">Принтер</div>
-                                 <div class="specific-title">Пробег:</div>
-                                 <div class="specific-value">Н/У</div>
-                                 <div class="specific-title">Макс. формат:</div>
-                                 <div class="specific-value">A4</div>
-                                 <div class="specific-title">Комплектация:</div>
-                                 <div class="specific-value">USB кабель, кабель питания, драйверы</div>
+                                 <div class="specific-title">Тип:</div>
+                                 <div class="specific-value">Оригинал</div>
+                                 <div class="specific-title">Парт-номер:</div>
+                                 <div class="specific-value">RМ1-0655/0661</div>
+                                 <div class="specific-title">Состояние:</div>
+                                 <div class="specific-value">Б/У</div>
+                                 <div class="specific-title">Работает:</div>
+                                 <div class="specific-value">Да</div>
+                                 <div class="specific-title">Совместимость:</div>
+                                 <div class="specific-value">HP LJ 1010 / HP LJ 1018 / HP LJ 1020</div>
+                             </div>
+                         </div>
+                         <!-- Вкладка таблицы совместимости -->
+                         <div class="tab-pane fade" id="ad-compatible">
+                             <div class="ad-compatible">
+                                 Здесь таблица совместимости для каких устройств подходит
                              </div>
                          </div>
                      </div>
