Доделал скелеты страниц объявлений для разных типов объявлений

--- a/pages/ad_component.html
+++ b/pages/ad_component.html
@@ -218,9 +218,9 @@
                          <div class="specific-value">Б/У</div>
                          <div class="specific-title">Работает:</div>
                          <div class="specific-value">Нет</div>
-                         <a href="#ad-specific" data-toggle="tab">Все характеристики</a>
+                         <a href="#ad-specific" data-toggle="tab">Что в наличии</a>
+                         <hr>
                      </div>
-                     <hr>
                      <!-- Информация о продавце -->
                      <div class="ads-block__seller-block">
                          <div class="ads-block__seller-block__descrip">
@@ -256,11 +256,6 @@
                                  Описание
                              </a>
                          </li>
-                         <li class="nav-item">
-                             <a href="#ad-missing" class="nav-link" data-toggle="tab">
-                                 Продано / отсутствует / неисправно
-                             </a>
-                         </li>
                      </ul>
                      <!-- Содержимое вкладок -->
                      <div class="tab-content">
@@ -270,12 +265,6 @@
                                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci, aspernatur atque consequatur cupiditate dignissimos excepturi in ipsam labore nemo omnis perspiciatis praesentium ratione saepe sapiente sequi sit sunt unde veniam voluptatibus! Asperiores libero obcaecati quis voluptate voluptatibus. Accusantium animi beatae dolore est in repellat, soluta voluptas voluptatibus! Autem commodi, debitis distinctio dolorem illo ipsam magnam mollitia repellat?
                              </div>
                          </div>
-                         <!-- Вкладка отсутствующих/неисправных запчастей -->
-                         <div class="tab-pane fade" id="ad-missing">
-                             <div class="ad-missing">
-                                 Таблица отсутствующих или неисправных или проданных запчастей
-                             </div>
-                         </div>
                      </div>
                  </div>
                  <!-- Кнопка пожаловаться -->
@@ -283,7 +272,34 @@
                      <a href="#" class="btn btn-danger">
                          Пожаловаться на объявление
                      </a>
-                     <hr>
+                 </div>
+                 <!-- Блок отсутствующих/неисправных запчастей -->
+                 <div class="col-12">
+                     <div class="ad-missing">
+                         <h5 class="text-center">Продано / отсутствует / неисправно</h5>
+                         <table class="table table-responsive-sm table-hover">
+                             <thead>
+                             <tr>
+                                 <th>Наименование запчасти</th>
+                                 <th>Статус</th>
+                             </tr>
+                             </thead>
+                             <tbody>
+                             <tr>
+                                 <td>Блок лазера</td>
+                                 <td>Неисправен</td>
+                             </tr>
+                             <tr>
+                                 <td>Термоузел</td>
+                                 <td>Продано</td>
+                             </tr>
+                             <tr>
+                                 <td>Плата форматтера</td>
+                                 <td>Отсутствует</td>
+                             </tr>
+                             </tbody>
+                         </table>
+                     </div>
                  </div>
                  <!-- Место под модули (объявления, баннеры и т.п.) -->
                  <div class="col-12">
