Исправлены ссылки на ресурсы страниц index и index2.

--- a/index2.html
+++ b/index2.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
 
     <!-- Корректировка стиля. -->
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/ads_views.css">
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/ads_views.css">
 
     <title>Доска объявлений №1 по продаже оргтехники</title>
 </head>
@@ -97,7 +97,7 @@
     <div class="row">
         <div class="d-none d-md-block col-md-12 text-right menu_top align-items-center">
             <a href="#">
-                <img class="logo2" src="/img/logo.png" alt="ProdaiZip.ru">
+                <img class="logo2" src="./img/logo.png" alt="ProdaiZip.ru">
             </a>
 
             <a href="#" class="notice">
@@ -110,7 +110,7 @@
                 Войти
             </a>
             <a href="#" class="profileimg">
-                <img src="/img/profile-default.png" alt="Профиль">
+                <img src="./img/profile-default.png" alt="Профиль">
             </a>
             <a href="#" class="btn btn-danger">
                 Подать объявление
@@ -946,7 +946,7 @@
                     <div class="col ads highlight">
                         <div class="ads_wrapper">
                             <a href="#" title="Продам принтер HP 1010 как новый!">
-                                <img src="../img/print_main.jpg">
+                                <img src="./img/print_main.jpg">
                             </a>
                         </div>
                         <div>
@@ -964,7 +964,7 @@
                     <div class="col ads highlight">
                         <div class="ads_wrapper">
                             <a href="#" title="Куплю L800 для печати фотографий">
-                                <img src="../img/print_str.jpg">
+                                <img src="./img/print_str.jpg">
                             </a>
                         </div>
                         <div>
@@ -981,7 +981,7 @@
                     <div class="col ads highlight">
                         <div class="ads_wrapper">
                             <a href="#" title="Samsung SCX-4200 как новый">
-                                <img src="../img/printer_2.jpg">
+                                <img src="./img/printer_2.jpg">
                             </a>
                         </div>
                         <div>
@@ -998,7 +998,7 @@
                     <div class="col ads highlight">
                         <div class="ads_wrapper">
                             <a href="#" title="Ноутбук Acer, рабочий, разбита матрица">
-                                <img src="../img/noutebook.jpg">
+                                <img src="./img/noutebook.jpg">
                             </a>
                         </div>
                         <div>
