--- a/pages/ad_component.html
+++ b/pages/ad_component.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
 
     <!-- Корректировка стиля. -->
+    <link rel="stylesheet" href="../fonts/stylesheet.css">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/ads_views.css">
 
@@ -95,7 +96,7 @@
         <div class="row">
             <div class="d-none d-md-block col-md-12 text-right menu_top align-items-center">
                 <a href="#">
-                    <img class="logo2" src="/img/logo.png" alt="ProdaiZip.ru">
+                    <img class="logo2" src="../img/logo.png" alt="ProdaiZip.ru">
                 </a>
                 <a href="#">
                 <span class="fa-stack fa-1x has-badge" data-count="4">
@@ -131,7 +132,7 @@
                     Выйти
                 </a>
                 <a href="#" class="profileimg log-in">
-                    <img src="/img/840px-Elon-musk-850.jpg" alt="Профиль">
+                    <img src="../img/840px-Elon-musk-850.jpg" alt="Профиль">
                 </a>
                 <a href="#" class="btn btn-danger">
                     Подать объявление
