--- a/pages/category.html
+++ b/pages/category.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
 
     <!-- Корректировка стиля. -->
+    <link rel="stylesheet" href="../fonts/stylesheet.css">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/category.css">
     <link rel="stylesheet" href="../css/ads_views.css">
