Удалил шишний файл.

--- a/pages/ad_component.html
+++ b/pages/ad_component.html
@@ -191,7 +191,7 @@
              <div class="row">
                  <!-- Блок фото -->
                  <div class="col-8">
-                     <img src="../img/print_hp_1010.jpg" class="img-fluid" alt="">
+                     <img src="../img/print_main.jpg" class="img-fluid" alt="">
                  </div>
                  <!-- Блок информации о товаре и продавце -->
                  <div class="col-4">
