Заменил класс menuMobile на nav-item-mobile

--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@
     </div>
     <div class="collapse navbar-collapse" id="menu">
         <ul class="navbar-nav">
-            <div class="menuMobile">
+            <div class="nav-item nav-item-mobile">
                 <a class="nav-link btn btn-success btn-sm" href="#"><i class="fa fa-plus-circle"></i> Добавить объявление</a>
                 <a class="nav-link btn btn-sm btn-danger" href="#"><i class="fa fa-plus-circle"></i> Добавить горячий запрос</a>
             </div>
